# at3

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  ecsConfig.hpp
source/common/: CMakeLists.txt  activeControl.cpp  activeControl.h  camera.h  camera.hpp  debug.h  debug.hpp  delegate.h  eventResponseMap.cpp  eventResponseMap.h  eventResponseMap.hpp  game.h  game.hpp  glError.h  glUtil.cpp  graphicsBackend.cpp  graphicsBackend.h  imageProcessing.cpp  imageProcessing.h  imageProcessing.hpp  loadCubeMap.cpp  loadCubeMap.h  loadedTexture.cpp  loadedTexture.h  material.h  meshObject.h  meshObject.hpp  meshObjectVk.h  meshObjectVk.hpp  obj.hpp  objCamera.hpp  objCameraPerspective.hpp  objCameraThirdPerson.hpp  objMesh.hpp  oneToOneEventMap.cpp  oneToOneEventMap.h  perspectiveCamera.h  perspectiveCamera.hpp  scene.h  scene.hpp  (+32 more)
source/common/global/: CMakeLists.txt  TODO.h  TODO.hpp  configuration.h  configuration.hpp  definitions.hpp  fileSystemHelpers.cpp  fileSystemHelpers.hpp  macros.h  math.cpp  math.hpp  settings.cpp  settings.h  settings.hpp  utilities.cpp  utilities.h  utilities.hpp
source/common/gpuapi/: CMakeLists.txt  graphicsBackend.cpp  graphicsBackend.h  graphicsBackend.hpp  loadedTexture.cpp  loadedTexture.h  material.cpp  material.h  openglCalls.cpp  openglValidation.cpp  openglValidation.h  sdl2Calls.cpp  shaderProgram.cpp  shaderProgram.hpp  shaders.cpp  shaders.h  tiny_obj_loader.h  vulkanBackend.cpp  vulkanBackend.h  vulkanCalls.cpp  vulkanContext.cpp  vulkanContext.h  vulkanTest.c  vulkanTest.h  vulkanTest2.cpp  vulkanTest2.h
source/common/graphics/: CMakeLists.txt  glUtil.h  graphicsBackend.cpp  graphicsBackend.h  loadedTexture.cpp  material.cpp  shaders.cpp
source/common/input/: CMakeLists.txt  sdlc.cpp
source/common/network/: CMakeLists.txt  client.cpp  client.hpp  netInterface.cpp  netInterface.hpp  netRole.cpp  netRole.hpp  server.cpp  server.hpp  stateHistory.hpp  userPacketEnums.hpp
source/common/scene/: CMakeLists.txt  sceneObject.hpp  sceneTree.hpp  transform.cpp  transformRAII.cpp  transformStack.hpp
source/common/shaders/: noTextureSunny.frag  terrain.vert
source/common/vulkan/: CMakeLists.txt  NOTICE  VulkanTexture.cpp  VulkanTexture.hpp  debug.h  mesh_loading.h  rendering.cpp  rendering.h  sdlc.cpp  sdlc.hpp  shader_inputs.h  timing.h  vkc.h  vkc.hpp  vkcAlloc.cpp  vkcAlloc.h  vkcAlloc.hpp  vkcDataStore.cpp  vkcDataStore.h  vkcImplApi.h  vkcImplApi.hpp  vkcImplInternal.h  vkcImplInternalCallOnce.h  vkcImplInternalCallOnce.hpp  vkcImplInternalDynamic.h  vkcImplInternalDynamic.hpp  vkcImplInternalResources.h  vkcImplInternalResources.hpp  vkcInitializers.h  vkcMaterial.cpp  vkcMaterial.h  vkcMaterial.hpp  vkcPipelines.cpp  vkcPipelines.hpp  vkcTextures.cpp  vkcTextures.hpp  vkcTypes.h  vkcTypes.hpp  vkcUboPageMgr.cpp  vkcUboPageMgr.h  (+6 more)
source/triceratone/: CMakeLists.txt  basicWalker.cpp  basicWalker.h  basicWalker.hpp  basicWalkerVk.cpp  basicWalkerVk.h  basicWalkerVk.hpp  debugStuff.cpp  debugStuff.h  debugStuff.hpp  duneBuggy.cpp  duneBuggy.h  duneBuggy.hpp  duneBuggyVk.cpp  duneBuggyVk.h  duneBuggyVk.hpp  main.cpp  pyramid.cpp  pyramid.h  pyramid.hpp  pyramidVk.cpp  pyramidVk.h  pyramidVk.hpp  walker.cpp  walker.hpp
source/triceratone/components/: CMakeLists.txt  components.hpp  interface.cpp  interface.hpp  networking.cpp  networking.hpp  serialization.cpp  serialization.hpp
source/triceratone/constructs/: CMakeLists.txt  duneBuggy.cpp  duneBuggy.hpp  freeCam.cpp  freeCam.hpp  playerSet.cpp  playerSet.hpp  pyramid.cpp  pyramid.hpp  walker.cpp  walker.hpp
source/triceratone/ecs/: CMakeLists.txt  dualityInterface.cpp  dualityInterface.h  ecsConfig.hpp  ecsInterface.cpp  ecsInterface.h  ecsInterface.hpp  ecsNetworking.cpp  ecsNetworking.hpp  ecsSystem_animation.cpp  ecsSystem_animation.h  ecsSystem_animation.hpp  ecsSystem_controls.cpp  ecsSystem_controls.h  ecsSystem_controls.hpp  ecsSystem_netSync.cpp  ecsSystem_netSync.hpp  ecsSystem_physics.cpp  ecsSystem_physics.h  ecsSystem_physics.hpp  ecsSystem_scene.cpp  ecsSystem_scene.hpp
source/triceratone/mechanics/: CMakeLists.txt  cylinderMath.cpp  cylinderMath.h  cylinderMath.hpp
source/triceratone/systems/: CMakeLists.txt  controls.cpp  controls.hpp  network.cpp  network.hpp  physics.cpp  physics.hpp  scene.cpp  scene.hpp
src/: CMakeLists.txt  duneBuggy.cpp  main.cpp
src/assets/models/: pyramid_thruster_flames.dae
src/common/: CMakeLists.txt  camera.cpp  camera.h  debug.cpp  debug.h  game.cpp  game.h  glError.h  loadCubeMap.h  loadedTexture.cpp  loadedTexture.h  meshObject.cpp  meshObject.h  perspectiveCamera.cpp  perspectiveCamera.h  scene.cpp  scene.h  sceneObject.cpp  sceneObject.h  shaderProgram.cpp  shaderProgram.h  shaders.cpp  shaders.h  skyBox.cpp  skyBox.h  terrainObject.cpp  terrainObject.h  thirdPersonCamera.h  transform.h  transformRAII.cpp  transformRAII.h  transformStack.cpp  transformStack.h  wasdCamera.cpp  wasdCamera.h
src/common/shaders/: billboard.frag  billboard.vert  billboardPoint.vert  noTextureSunny.vert  terrain.frag  terrain.tesc  texture.frag  texture.vert  wireframe.frag
src/cruisin/: CMakeLists.txt  debugStuff.cpp  debugStuff.h  duneBuggy.cpp  duneBuggy.h  ecsConfig.hpp  main.cpp  pyramid.cpp  pyramid.h
src/cruisin/ecs/: CMakeLists.txt  dualityInterface.cpp  dualityInterface.h  ecsConfig.hpp  ecsSystem_ai.cpp  ecsSystem_ai.h  ecsSystem_controls.cpp  ecsSystem_kalman.cpp  ecsSystem_physics.cpp  ecsSystem_physics.h
src/cruisin/systems/: CMakeLists.txt  bulletDebug.cpp  bulletDebug.h  ecsSystem_controls.cpp  ecsSystem_kalman.h
src/sweepers/: CMakeLists.txt  debugStuff.cpp  debugStuff.h  duneBuggy.cpp  duneBuggy.h  pyramid.cpp
src/sweepers/ecs/: CMakeLists.txt  dualityInterface.cpp  dualityInterface.h  ecsConfig.hpp  ecsSystem_ai.cpp  ecsSystem_ai.h  ecsSystem_controls.h  (+1 more)
src/systems/: CMakeLists.txt  bulletDebug.cpp  bulletDebug.h  ecsSystem_controls.cpp  ecsSystem_controls.h  ecsSystem_kalman.cpp  ecsSystem_kalman.h  ecsSystem_movement.cpp  ecsSystem_movement.h  ecsSystem_physics.cpp  ecsSystem_physics.h
(+189 files in other folders)
